[project]
name = "catalyst-sdwan-mcp-server"
version = "1.0.0"
description = "Cisco Catalyst SD-WAN MCP Server - Model Context Protocol server for Cisco SD-WAN Manager API"
authors = [
    {name = "Patrick Mosimann"}
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "urllib3>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["catalyst_sdwan_mcp_server.py"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
